--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -6,4 +6,5 @@
 html, body {
   margin: 0;
   padding: 0;
+  overflow-x:hidden;
 }
